# rust-module

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT.txt  README.md  application.html  build_wasm.sh  index.js  javascript.js  module.json  package.json  style.css  webpack.config.js
.github/workflows/: main.yml
js/: index.js
rust/: Cargo.toml  lib.rs
src/: api.rs  data_structures.rs  index.js  lib.rs
src/application/: rule_elements.rs  rust_module_application.rs
src/bindings/: application.rs  hooks.rs  notifications.rs
