[package]
name = "rust_module"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A proof-of-concept for running rust from javascript"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
