[package]
name = "rust_module"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
convert_case = "0.6.0"
strum = "0.24.1"
strum_macros = "0.24.3"
js-sys = "0.3.60"
leptos = "0.0.21"
serde = { version = "1.0.152", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = "0.2.83"
